Fix: add z-index for popup menu (thanks to Yoann ;).

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -74,6 +74,7 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     background-color: #FAFAFA;
+    z-index: 99;
 }
 
 .filters li {
